# sortOfRemoteNG

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.prod  README.md  SECURITY.md  TODO.md  UI_CENTRALIZATION_PLAN.md  adopt-form-components.mjs  architecture.md  contributing.md  eslint.config.js  index.html  license.md  migrate-fix.mjs  migrate.mjs  next.config.js  package-lock.json  package.json  readme.md  rust-toolchain.toml  split-wave3.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  users.json  version.json  vite.config.ts  vitest.config.ts  vitest.import-export.config.ts  vitest.setup.ts
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json  tauri.readme-screenshot.conf.json  timings_err.txt
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/: VENDORED.md
src-tauri/crates/sorng-1password/: Cargo.toml
src-tauri/crates/sorng-about/: Cargo.toml
src-tauri/crates/sorng-ai-agent/: Cargo.toml
src-tauri/crates/sorng-ai-assist/: Cargo.toml
src-tauri/crates/sorng-amavis/: Cargo.toml
src-tauri/crates/sorng-ansible/: Cargo.toml
src-tauri/crates/sorng-apache/: Cargo.toml
src-tauri/crates/sorng-app-api/: Cargo.toml
src-tauri/crates/sorng-app-auth/: Cargo.toml
src-tauri/crates/sorng-app-domains/: Cargo.toml
src-tauri/crates/sorng-app-domains-cloud/: Cargo.toml
src-tauri/crates/sorng-app-domains-collab/: Cargo.toml
src-tauri/crates/sorng-app-domains-core/: Cargo.toml
src-tauri/crates/sorng-app-domains-ops/: Cargo.toml
src-tauri/crates/sorng-app-domains-platform/: Cargo.toml
src-tauri/crates/sorng-app-shell/: Cargo.toml
src-tauri/crates/sorng-app-startup-connectivity/: Cargo.toml
src-tauri/crates/sorng-app-startup-state/: Cargo.toml
src-tauri/crates/sorng-ard/: Cargo.toml
src-tauri/crates/sorng-auth/: Cargo.toml
src-tauri/crates/sorng-aws/: Cargo.toml
src-tauri/crates/sorng-aws-vendor/: Cargo.toml
src-tauri/crates/sorng-azure/: Cargo.toml
src-tauri/crates/sorng-backup-verify/: Cargo.toml
src-tauri/crates/sorng-biometrics/: Cargo.toml
src-tauri/crates/sorng-bitwarden/: Cargo.toml
src-tauri/crates/sorng-bmc-common/: Cargo.toml
src-tauri/crates/sorng-bootloader/: Cargo.toml
src-tauri/crates/sorng-budibase/: Cargo.toml
src-tauri/crates/sorng-caddy/: Cargo.toml
src-tauri/crates/sorng-ceph/: Cargo.toml
src-tauri/crates/sorng-cicd/: Cargo.toml
src-tauri/crates/sorng-clamav/: Cargo.toml
src-tauri/crates/sorng-cloud/: Cargo.toml
src-tauri/crates/sorng-collaboration/: Cargo.toml
src-tauri/crates/sorng-command-palette/: Cargo.toml
src-tauri/crates/sorng-commands-access/: Cargo.toml
src-tauri/crates/sorng-commands-cloud/: Cargo.toml
src-tauri/crates/sorng-commands-collab/: Cargo.toml
src-tauri/crates/sorng-commands-core/: Cargo.toml
src-tauri/crates/sorng-commands-infra/: Cargo.toml
src-tauri/crates/sorng-commands-mail/: Cargo.toml
src-tauri/crates/sorng-commands-ops/: Cargo.toml
src-tauri/crates/sorng-commands-platform/: Cargo.toml
src-tauri/crates/sorng-commands-services/: Cargo.toml
src-tauri/crates/sorng-commands-sessions/: Cargo.toml
src-tauri/crates/sorng-commands-tools/: Cargo.toml
src-tauri/crates/sorng-commands-webservers/: Cargo.toml
src-tauri/crates/sorng-compression-vendor/: Cargo.toml
src-tauri/crates/sorng-consul/: Cargo.toml
src-tauri/crates/sorng-core/: Cargo.toml
src-tauri/crates/sorng-cpanel/: Cargo.toml
src-tauri/crates/sorng-credentials/: Cargo.toml
src-tauri/crates/sorng-cron/: Cargo.toml
src-tauri/crates/sorng-cups/: Cargo.toml
src-tauri/crates/sorng-cyrus-sasl/: Cargo.toml
src-tauri/crates/sorng-dashboard/: Cargo.toml
src-tauri/crates/sorng-dashlane/: Cargo.toml
src-tauri/crates/sorng-ddns/: Cargo.toml
src-tauri/crates/sorng-dhcp/: Cargo.toml
src-tauri/crates/sorng-diskmgmt/: Cargo.toml
src-tauri/crates/sorng-dns/: Cargo.toml
src-tauri/crates/sorng-docker/: Cargo.toml
src-tauri/crates/sorng-docker-compose/: Cargo.toml
src-tauri/crates/sorng-dovecot/: Cargo.toml
src-tauri/crates/sorng-dropbox/: Cargo.toml
src-tauri/crates/sorng-encryption/: Cargo.toml
src-tauri/crates/sorng-etcd/: Cargo.toml
src-tauri/crates/sorng-exchange/: Cargo.toml
src-tauri/crates/sorng-extensions/: Cargo.toml
src-tauri/crates/sorng-fail2ban/: Cargo.toml
src-tauri/crates/sorng-filesharing/: Cargo.toml
src-tauri/crates/sorng-filters/: Cargo.toml
src-tauri/crates/sorng-fonts/: Cargo.toml
src-tauri/crates/sorng-freeipa/: Cargo.toml
src-tauri/crates/sorng-ftp/: Cargo.toml
src-tauri/crates/sorng-gateway/: Cargo.toml
src-tauri/crates/sorng-gcp/: Cargo.toml
src-tauri/crates/sorng-gdrive/: Cargo.toml
src-tauri/crates/sorng-google-passwords/: Cargo.toml
src-tauri/crates/sorng-gpg-agent/: Cargo.toml
src-tauri/crates/sorng-gpo/: Cargo.toml
src-tauri/crates/sorng-grafana/: Cargo.toml
src-tauri/crates/sorng-haproxy/: Cargo.toml
src-tauri/crates/sorng-hashicorp-vault/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: about_commands.rs  agent.rs  agent_commands.rs  ai_agent_commands.rs  ai_assist_commands.rs  amavis_commands.rs  ansible_commands.rs  anydesk_commands.rs  apache_commands.rs  api.rs  api_capability.rs  api_capability_commands.rs  api_config.rs  api_server_commands.rs  app_auth_commands.rs  app_settings_commands.rs  app_shell_commands.rs  ard_commands.rs  auth.rs  auto_lock.rs  aws.rs  aws_commands.rs  azure.rs  azure_commands.rs  backup.rs  backup_commands.rs  backup_verify_commands.rs  bearer_auth.rs  biometrics_commands.rs  bitwarden_commands.rs  bootloader_commands.rs  budibase_commands.rs  caddy_commands.rs  ceph_commands.rs  cert_auth.rs  cert_auth_commands.rs  cert_gen_commands.rs  chaining.rs  chaining_commands.rs  cicd_commands.rs  (+223 more)
src-tauri/tests/: api_test.rs  auth_tests.rs  chaining_tests.rs  composition_boundaries.rs  encryption_lifecycle_e2e.rs  encryption_rotation_e2e.rs  ftp_wire_test.rs  native_renderer_test.rs  proxy_tests.rs  storage_tests.rs
(+5637 files in other folders)
