[workspace]
members = [
  "crates/sorng-core",
  "crates/sorng-auth",
  "crates/sorng-storage",
  "crates/sorng-network",
  "crates/sorng-ssh",
  "crates/sorng-rdp",
  "crates/sorng-protocols",
  "crates/sorng-vpn",
  "crates/sorng-cloud",
  "crates/sorng-aws",
  "crates/sorng-remote-mgmt",
  "crates/sorng-gpo",
  "crates/sorng-ard",
  "crates/sorng-telnet",
  "crates/sorng-ftp",
  "crates/sorng-sftp",
  "crates/sorng-vnc",
  "crates/sorng-rustdesk",
  "crates/sorng-bitwarden",
  "crates/sorng-keepass",
  "crates/sorng-scp",
  "crates/sorng-mysql",
  "crates/sorng-postgres",
  "crates/sorng-mssql",
  "crates/sorng-sqlite",
  "crates/sorng-mongodb",
  "crates/sorng-redis",
  "crates/sorng-passbolt",
  "crates/sorng-ai-agent",
  "crates/sorng-powershell",
  "crates/sorng-1password",
  "crates/sorng-lastpass",
  "crates/sorng-google-passwords",
  "crates/sorng-dashlane",
  "crates/sorng-winmgmt",
  "crates/sorng-serial",
  "crates/sorng-hyperv",
  "crates/sorng-meshcentral",
  "crates/sorng-openvpn",
  "crates/sorng-vmware",
  "crates/sorng-proxmox",
  "crates/sorng-idrac",
  "crates/sorng-totp",
  "crates/sorng-mremoteng",
  "crates/sorng-termserv",
  "crates/sorng-whatsapp",
  "crates/sorng-telegram",
  "crates/sorng-dropbox",
  "crates/sorng-nextcloud",
  "crates/sorng-gdrive",
  "crates/sorng-onedrive",
  "crates/sorng-recording",
  "crates/sorng-gcp",
  "crates/sorng-azure",
  "crates/sorng-exchange",
  "crates/sorng-smtp",
  "crates/sorng-llm",
  "crates/sorng-ai-assist",
  "crates/sorng-terminal-themes",
  "crates/sorng-extensions",
  "crates/sorng-collaboration",
  "crates/sorng-gateway",
  "crates/sorng-biometrics",
  "crates/sorng-vault",
  "crates/sorng-p2p",
  "crates/sorng-tailscale",
  "crates/sorng-zerotier",
  "crates/sorng-wireguard",
  "crates/sorng-dns",
  "crates/sorng-k8s",
  "crates/sorng-docker",
  "crates/sorng-ansible",
  "crates/sorng-terraform",
  "crates/sorng-i18n",
  "crates/sorng-command-palette",
  "crates/sorng-fonts",
  "crates/sorng-secure-clip",
  "crates/sorng-budibase",
  "crates/sorng-osticket",
  "crates/sorng-jira",
  "crates/sorng-letsencrypt",
  "crates/sorng-ssh-agent",
  "crates/sorng-warpgate",
  "crates/sorng-ssh-scripts",
  "crates/sorng-mcp",
  "crates/sorng-snmp",
  "crates/sorng-bmc-common",
  "crates/sorng-ilo",
  "crates/sorng-lenovo",
  "crates/sorng-supermicro",
  "crates/sorng-synology",
  "crates/sorng-notifications",
  "crates/sorng-filters",
  "crates/sorng-hooks",
  "crates/sorng-scheduler",
  "crates/sorng-credentials",
  "crates/sorng-topology",
  "crates/sorng-replay",
  "crates/sorng-marketplace",
  "crates/sorng-dashboard",
  "crates/sorng-updater",
  "crates/sorng-rdpfile",
  "crates/sorng-portable",
  "crates/sorng-docker-compose",
  "crates/sorng-lxd",
  "crates/sorng-netbird",
  "crates/sorng-teleport",
  "crates/sorng-vmware-desktop",
  "crates/sorng-spice",
  "crates/sorng-nx",
  "crates/sorng-xdmcp",
  "crates/sorng-x2go",
  "crates/sorng-nginx",
  "crates/sorng-traefik",
  "crates/sorng-haproxy",
  "crates/sorng-apache",
  "crates/sorng-caddy",
  "crates/sorng-nginx-proxy-mgr",
  "crates/sorng-postfix",
  "crates/sorng-gpg-agent",
  "crates/sorng-yubikey",
  "crates/sorng-opendkim",
  "crates/sorng-cyrus-sasl",
  "crates/sorng-dovecot",
  "crates/sorng-ddns",
  "crates/sorng-netmgr",
  "crates/sorng-netutils",
  "crates/sorng-clamav",
  "crates/sorng-rspamd",
  "crates/sorng-roundcube",
  "crates/sorng-spamassassin",
  "crates/sorng-proc",
  "crates/sorng-procmail",
  "crates/sorng-mailcow",
  "crates/sorng-amavis",
  "crates/sorng-remote-backup",
  "crates/sorng-fail2ban",
  "crates/sorng-cron",
  "crates/sorng-bootloader",
  "crates/sorng-time-ntp",
  "crates/sorng-os-detect",
  "crates/sorng-kernel",
  "crates/sorng-pam",
  "crates/sorng-cpanel",
  "crates/sorng-php",
  "crates/sorng-port-knock",
  "crates/sorng-about",
  "crates/sorng-mac",
  "crates/sorng-cicd",
  "crates/sorng-oracle-cloud",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
sha2 = "0.10"
dirs = "5.0"

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# ── Workspace crates ──────────────────────────────────────────────────
sorng-core = { path = "crates/sorng-core" }
sorng-auth = { path = "crates/sorng-auth" }
sorng-storage = { path = "crates/sorng-storage" }
sorng-network = { path = "crates/sorng-network" }
sorng-ssh = { path = "crates/sorng-ssh" }
sorng-rdp = { path = "crates/sorng-rdp" }
sorng-protocols = { path = "crates/sorng-protocols" }
sorng-vpn = { path = "crates/sorng-vpn" }
sorng-cloud = { path = "crates/sorng-cloud" }
sorng-aws = { path = "crates/sorng-aws" }
sorng-remote-mgmt = { path = "crates/sorng-remote-mgmt" }
sorng-gpo = { path = "crates/sorng-gpo" }
sorng-ard = { path = "crates/sorng-ard" }
sorng-ftp = { path = "crates/sorng-ftp" }
sorng-sftp = { path = "crates/sorng-sftp" }
sorng-telnet = { path = "crates/sorng-telnet" }
sorng-vnc = { path = "crates/sorng-vnc" }
sorng-rustdesk = { path = "crates/sorng-rustdesk" }
sorng-bitwarden = { path = "crates/sorng-bitwarden" }
sorng-keepass = { path = "crates/sorng-keepass" }
sorng-scp = { path = "crates/sorng-scp" }
sorng-mysql = { path = "crates/sorng-mysql" }
sorng-postgres = { path = "crates/sorng-postgres" }
sorng-mssql = { path = "crates/sorng-mssql" }
sorng-sqlite = { path = "crates/sorng-sqlite" }
sorng-mongodb = { path = "crates/sorng-mongodb" }
sorng-redis = { path = "crates/sorng-redis" }
sorng-passbolt = { path = "crates/sorng-passbolt" }
sorng-ai-agent = { path = "crates/sorng-ai-agent" }
sorng-powershell = { path = "crates/sorng-powershell" }
sorng-1password = { path = "crates/sorng-1password" }
sorng-lastpass = { path = "crates/sorng-lastpass" }
sorng-google-passwords = { path = "crates/sorng-google-passwords" }
sorng-dashlane = { path = "crates/sorng-dashlane" }
sorng-winmgmt = { path = "crates/sorng-winmgmt" }
sorng-serial = { path = "crates/sorng-serial" }
sorng-hyperv = { path = "crates/sorng-hyperv" }
sorng-meshcentral = { path = "crates/sorng-meshcentral" }
sorng-openvpn = { path = "crates/sorng-openvpn" }
sorng-vmware = { path = "crates/sorng-vmware" }
sorng-proxmox = { path = "crates/sorng-proxmox" }
sorng-idrac = { path = "crates/sorng-idrac" }
sorng-totp = { path = "crates/sorng-totp" }
sorng-mremoteng = { path = "crates/sorng-mremoteng" }
sorng-termserv = { path = "crates/sorng-termserv" }
sorng-whatsapp = { path = "crates/sorng-whatsapp" }
sorng-telegram = { path = "crates/sorng-telegram" }
sorng-onedrive = { path = "crates/sorng-onedrive" }
sorng-dropbox = { path = "crates/sorng-dropbox" }
sorng-nextcloud = { path = "crates/sorng-nextcloud" }
sorng-gdrive = { path = "crates/sorng-gdrive" }
sorng-recording = { path = "crates/sorng-recording" }
sorng-gcp = { path = "crates/sorng-gcp" }
sorng-azure = { path = "crates/sorng-azure" }
sorng-exchange = { path = "crates/sorng-exchange" }
sorng-smtp = { path = "crates/sorng-smtp" }
sorng-llm = { path = "crates/sorng-llm" }
sorng-ai-assist = { path = "crates/sorng-ai-assist" }
sorng-terminal-themes = { path = "crates/sorng-terminal-themes" }
sorng-extensions = { path = "crates/sorng-extensions" }
sorng-collaboration = { path = "crates/sorng-collaboration" }
sorng-gateway = { path = "crates/sorng-gateway" }
sorng-biometrics = { path = "crates/sorng-biometrics" }
sorng-vault = { path = "crates/sorng-vault" }
sorng-p2p = { path = "crates/sorng-p2p" }
sorng-tailscale = { path = "crates/sorng-tailscale" }
sorng-zerotier = { path = "crates/sorng-zerotier" }
sorng-wireguard = { path = "crates/sorng-wireguard" }
sorng-dns = { path = "crates/sorng-dns" }
sorng-k8s = { path = "crates/sorng-k8s" }
sorng-docker = { path = "crates/sorng-docker" }
sorng-docker-compose = { path = "crates/sorng-docker-compose" }
sorng-ansible = { path = "crates/sorng-ansible" }
sorng-terraform = { path = "crates/sorng-terraform" }
sorng-i18n = { path = "crates/sorng-i18n" }
sorng-command-palette = { path = "crates/sorng-command-palette" }
sorng-fonts = { path = "crates/sorng-fonts" }
sorng-secure-clip = { path = "crates/sorng-secure-clip" }
sorng-budibase = { path = "crates/sorng-budibase" }
sorng-osticket = { path = "crates/sorng-osticket" }
sorng-jira = { path = "crates/sorng-jira" }
sorng-letsencrypt = { path = "crates/sorng-letsencrypt" }
sorng-ssh-agent = { path = "crates/sorng-ssh-agent" }
sorng-opkssh = { path = "crates/sorng-opkssh" }
sorng-warpgate = { path = "crates/sorng-warpgate" }
sorng-ssh-scripts = { path = "crates/sorng-ssh-scripts" }
sorng-mcp = { path = "crates/sorng-mcp" }
sorng-snmp = { path = "crates/sorng-snmp" }
sorng-bmc-common = { path = "crates/sorng-bmc-common" }
sorng-ilo = { path = "crates/sorng-ilo" }
sorng-lenovo = { path = "crates/sorng-lenovo" }
sorng-supermicro = { path = "crates/sorng-supermicro" }
sorng-synology = { path = "crates/sorng-synology" }
sorng-notifications = { path = "crates/sorng-notifications" }
sorng-filters = { path = "crates/sorng-filters" }
sorng-hooks = { path = "crates/sorng-hooks" }
sorng-scheduler = { path = "crates/sorng-scheduler" }
sorng-credentials = { path = "crates/sorng-credentials" }
sorng-topology = { path = "crates/sorng-topology" }
sorng-replay = { path = "crates/sorng-replay" }
sorng-marketplace = { path = "crates/sorng-marketplace" }
sorng-updater = { path = "crates/sorng-updater" }
sorng-rdpfile = { path = "crates/sorng-rdpfile" }
sorng-portable = { path = "crates/sorng-portable" }
sorng-dashboard = { path = "crates/sorng-dashboard" }
sorng-lxd = { path = "crates/sorng-lxd" }
sorng-netbird = { path = "crates/sorng-netbird" }
sorng-teleport = { path = "crates/sorng-teleport" }
sorng-vmware-desktop = { path = "crates/sorng-vmware-desktop" }
sorng-spice = { path = "crates/sorng-spice" }
sorng-nx = { path = "crates/sorng-nx" }
sorng-xdmcp = { path = "crates/sorng-xdmcp" }
sorng-x2go = { path = "crates/sorng-x2go" }
sorng-nginx = { path = "crates/sorng-nginx" }
sorng-traefik = { path = "crates/sorng-traefik" }
sorng-haproxy = { path = "crates/sorng-haproxy" }
sorng-apache = { path = "crates/sorng-apache" }
sorng-caddy = { path = "crates/sorng-caddy" }
sorng-nginx-proxy-mgr = { path = "crates/sorng-nginx-proxy-mgr" }
sorng-postfix = { path = "crates/sorng-postfix" }
sorng-gpg-agent = { path = "crates/sorng-gpg-agent" }
sorng-yubikey = { path = "crates/sorng-yubikey" }
sorng-opendkim = { path = "crates/sorng-opendkim" }
sorng-dovecot = { path = "crates/sorng-dovecot" }
sorng-ddns = { path = "crates/sorng-ddns" }
sorng-netmgr = { path = "crates/sorng-netmgr" }
sorng-netutils = { path = "crates/sorng-netutils" }
sorng-spamassassin = { path = "crates/sorng-spamassassin" }
sorng-clamav = { path = "crates/sorng-clamav" }
sorng-rspamd = { path = "crates/sorng-rspamd" }
sorng-roundcube = { path = "crates/sorng-roundcube" }
sorng-cyrus-sasl = { path = "crates/sorng-cyrus-sasl" }
sorng-proc = { path = "crates/sorng-proc" }
sorng-procmail = { path = "crates/sorng-procmail" }
sorng-mailcow = { path = "crates/sorng-mailcow" }
sorng-amavis = { path = "crates/sorng-amavis" }
sorng-remote-backup = { path = "crates/sorng-remote-backup" }
sorng-fail2ban = { path = "crates/sorng-fail2ban" }
sorng-cron = { path = "crates/sorng-cron" }
sorng-bootloader = { path = "crates/sorng-bootloader" }
sorng-time-ntp = { path = "crates/sorng-time-ntp" }
sorng-os-detect = { path = "crates/sorng-os-detect" }
sorng-kernel = { path = "crates/sorng-kernel" }
sorng-pam = { path = "crates/sorng-pam" }
sorng-cpanel = { path = "crates/sorng-cpanel" }
sorng-php = { path = "crates/sorng-php" }
sorng-port-knock = { path = "crates/sorng-port-knock" }
sorng-about = { path = "crates/sorng-about" }
sorng-mac = { path = "crates/sorng-mac" }
sorng-cicd = { path = "crates/sorng-cicd" }
sorng-oracle-cloud = { path = "crates/sorng-oracle-cloud" }

# ── Shared / app-level dependencies ──────────────────────────────────
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
dirs = { workspace = true }
tauri-plugin-window-state = "2"
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"
hostname = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.11"
serial_test = "2.0"
chrono = { workspace = true }
uuid = { workspace = true }

[patch.crates-io]
ironrdp-connector = { path = "patches/ironrdp-connector" }
ironrdp-blocking = { path = "patches/ironrdp-blocking" }
