[workspace]
resolver = "2"
default-members = ["."]
members = [
  "crates/sorng-app-auth",
  "crates/sorng-app-domains",
  "crates/sorng-app-domains-cloud",
  "crates/sorng-app-domains-collab",
  "crates/sorng-app-domains-core",
  "crates/sorng-app-domains-ops",
  "crates/sorng-app-domains-platform",
  "crates/sorng-app-shell",
  "crates/sorng-core",
  "crates/sorng-auth",
  "crates/sorng-storage",
  "crates/sorng-network",
  "crates/sorng-ssh",
  "crates/sorng-rdp",
  "crates/sorng-protocols",
  "crates/sorng-vpn",
  "crates/sorng-cloud",
  "crates/sorng-aws",
  "crates/sorng-remote-mgmt",
  "crates/sorng-gpo",
  "crates/sorng-ard",
  "crates/sorng-telnet",
  "crates/sorng-ftp",
  "crates/sorng-sftp",
  "crates/sorng-vnc",
  "crates/sorng-rustdesk",
  "crates/sorng-bitwarden",
  "crates/sorng-keepass",
  "crates/sorng-scp",
  "crates/sorng-mysql",
  "crates/sorng-postgres",
  "crates/sorng-mssql",
  "crates/sorng-sqlite",
  "crates/sorng-mongodb",
  "crates/sorng-redis",
  "crates/sorng-passbolt",
  "crates/sorng-ai-agent",
  "crates/sorng-powershell",
  "crates/sorng-1password",
  "crates/sorng-lastpass",
  "crates/sorng-google-passwords",
  "crates/sorng-dashlane",
  "crates/sorng-winmgmt",
  "crates/sorng-serial",
  "crates/sorng-hyperv",
  "crates/sorng-meshcentral",
  "crates/sorng-openvpn",
  "crates/sorng-vmware",
  "crates/sorng-proxmox",
  "crates/sorng-idrac",
  "crates/sorng-totp",
  "crates/sorng-mremoteng",
  "crates/sorng-termserv",
  "crates/sorng-whatsapp",
  "crates/sorng-telegram",
  "crates/sorng-dropbox",
  "crates/sorng-nextcloud",
  "crates/sorng-gdrive",
  "crates/sorng-onedrive",
  "crates/sorng-recording",
  "crates/sorng-gcp",
  "crates/sorng-azure",
  "crates/sorng-exchange",
  "crates/sorng-smtp",
  "crates/sorng-llm",
  "crates/sorng-ai-assist",
  "crates/sorng-terminal-themes",
  "crates/sorng-extensions",
  "crates/sorng-collaboration",
  "crates/sorng-gateway",
  "crates/sorng-biometrics",
  "crates/sorng-vault",
  "crates/sorng-vault-windows",
  "crates/sorng-p2p",
  "crates/sorng-tailscale",
  "crates/sorng-zerotier",
  "crates/sorng-wireguard",
  "crates/sorng-dns",
  "crates/sorng-k8s",
  "crates/sorng-docker",
  "crates/sorng-ansible",
  "crates/sorng-terraform",
  "crates/sorng-i18n",
  "crates/sorng-command-palette",
  "crates/sorng-fonts",
  "crates/sorng-secure-clip",
  "crates/sorng-budibase",
  "crates/sorng-osticket",
  "crates/sorng-jira",
  "crates/sorng-letsencrypt",
  "crates/sorng-ssh-agent",
  "crates/sorng-warpgate",
  "crates/sorng-ssh-scripts",
  "crates/sorng-mcp",
  "crates/sorng-snmp",
  "crates/sorng-bmc-common",
  "crates/sorng-ilo",
  "crates/sorng-lenovo",
  "crates/sorng-supermicro",
  "crates/sorng-synology",
  "crates/sorng-notifications",
  "crates/sorng-filters",
  "crates/sorng-hooks",
  "crates/sorng-scheduler",
  "crates/sorng-credentials",
  "crates/sorng-topology",
  "crates/sorng-replay",
  "crates/sorng-marketplace",
  "crates/sorng-dashboard",
  "crates/sorng-updater",
  "crates/sorng-rdpfile",
  "crates/sorng-portable",
  "crates/sorng-docker-compose",
  "crates/sorng-lxd",
  "crates/sorng-netbird",
  "crates/sorng-teleport",
  "crates/sorng-vmware-desktop",
  "crates/sorng-spice",
  "crates/sorng-nx",
  "crates/sorng-xdmcp",
  "crates/sorng-x2go",
  "crates/sorng-nginx",
  "crates/sorng-traefik",
  "crates/sorng-haproxy",
  "crates/sorng-apache",
  "crates/sorng-caddy",
  "crates/sorng-consul",
  "crates/sorng-nginx-proxy-mgr",
  "crates/sorng-postfix",
  "crates/sorng-gpg-agent",
  "crates/sorng-yubikey",
  "crates/sorng-opendkim",
  "crates/sorng-cyrus-sasl",
  "crates/sorng-dovecot",
  "crates/sorng-ddns",
  "crates/sorng-netmgr",
  "crates/sorng-netutils",
  "crates/sorng-clamav",
  "crates/sorng-rspamd",
  "crates/sorng-roundcube",
  "crates/sorng-spamassassin",
  "crates/sorng-proc",
  "crates/sorng-procmail",
  "crates/sorng-mailcow",
  "crates/sorng-amavis",
  "crates/sorng-remote-backup",
  "crates/sorng-fail2ban",
  "crates/sorng-cron",
  "crates/sorng-bootloader",
  "crates/sorng-time-ntp",
  "crates/sorng-os-detect",
  "crates/sorng-kernel",
  "crates/sorng-pam",
  "crates/sorng-cpanel",
  "crates/sorng-php",
  "crates/sorng-port-knock",
  "crates/sorng-about",
  "crates/sorng-mac",
  "crates/sorng-cicd",
  "crates/sorng-oracle-cloud",
  "crates/sorng-ipmi",
  "crates/sorng-cups",
  "crates/sorng-backup-verify",
  "crates/sorng-ceph",
  "crates/sorng-rabbitmq",
  "crates/sorng-kafka",
  "crates/sorng-pfsense",
  "crates/sorng-mysql-admin",
  "crates/sorng-postgres-admin",
  "crates/sorng-prometheus",
  "crates/sorng-grafana",
  "crates/sorng-ups",
  "crates/sorng-netbox",
  "crates/sorng-hashicorp-vault",
  "crates/sorng-zabbix",
  "crates/sorng-freeipa",
  "crates/sorng-dhcp",
  "crates/sorng-diskmgmt",
  "crates/sorng-etcd",
  "crates/sorng-filesharing",
  "crates/sorng-hetzner",
  "crates/sorng-ldap",
  "crates/sorng-packages",
  "crates/sorng-syslog",
  "crates/sorng-systemd",
  "crates/sorng-usermgmt",
]

[workspace.dependencies]
# ── Serialisation ─────────────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# ── Async runtime ─────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# ── Framework ─────────────────────────────────────────────────────────
tauri = { version = "=2.10.3", features = ["devtools"] }

# ── HTTP / networking ─────────────────────────────────────────────────
# Minimal base — crates add features via { workspace = true, features = [...] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
url = "2.5"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
bytes = "1"
ssh2 = "0.9"
windows = "=0.62.2"
windows-sys = "=0.61.2"

# ── Database ──────────────────────────────────────────────────────────
# Keep SQLx exact and feature-less at the workspace root so crate-level
# manifests only opt into the specific backend/runtime features they need.
sqlx = { version = "=0.7.4", default-features = false }

# ── Cryptography ──────────────────────────────────────────────────────
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }

# ── Common utilities ──────────────────────────────────────────────────
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
dirs = "=6.0.0"
regex = "1.10"
lazy_static = "1.4"
thiserror = "1.0"

# ── Testing ───────────────────────────────────────────────────────────
tokio-test = "0.4"
tempfile = "3.0"

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
sorng-app-auth = { path = "crates/sorng-app-auth" }
sorng-app-domains = { path = "crates/sorng-app-domains", default-features = false }
sorng-app-shell = { path = "crates/sorng-app-shell" }
sorng-core = { path = "crates/sorng-core" }
sorng-kafka = { path = "crates/sorng-kafka", optional = true }

serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
tauri-plugin-log = "=2.8.0"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-fs = "=2.4.5"
tokio = { workspace = true }
dirs = { workspace = true }
tauri-plugin-window-state = "=2.4.1"
axum = "0.7"

# ── Crates required by include!()'d leaf-crate command files ──────
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
ssh2 = { workspace = true }
reqwest = { workspace = true }
tokio-rustls = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
sorng-bmc-common = { path = "crates/sorng-bmc-common" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_UI_Input_KeyboardAndMouse"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = "0.11"
serial_test = "2.0"

[features]
default = ["cloud", "collab", "ops", "platform", "rdp"]
full = ["cert-auth", "cloud", "collab", "db-mongo", "db-mssql", "db-mysql", "db-postgres", "db-redis", "db-sqlite", "kafka", "ops", "platform", "rdp", "script-engine", "tls-cert-details"]
cert-auth = ["sorng-app-domains/cert-auth"]
cloud = ["sorng-app-domains/cloud"]
collab = ["sorng-app-domains/collab"]
db-mongo = ["sorng-app-domains/db-mongo"]
db-mssql = ["sorng-app-domains/db-mssql"]
db-mysql = ["sorng-app-domains/db-mysql"]
db-postgres = ["sorng-app-domains/db-postgres"]
db-redis = ["sorng-app-domains/db-redis"]
db-sqlite = ["sorng-app-domains/db-sqlite"]
kafka = ["dep:sorng-kafka"]
ops = ["sorng-app-domains/ops"]
platform = ["sorng-app-domains/platform"]
rdp = ["sorng-app-domains/rdp"]
script-engine = ["sorng-app-domains/script-engine"]
tls-cert-details = ["sorng-app-domains/tls-cert-details"]

# ═══════════════════════════════════════════════════════════════════════
# Build performance profiles
# ═══════════════════════════════════════════════════════════════════════

[profile.dev]
# Keep codegen-units at 8 for the root app crate.  The app crate is
# huge (9000+ lines, 170+ extern imports) but 8 CGUs is still needed
# for reasonable incremental rebuild speed.  The heavy third-party crates
# are individually pinned to codegen-units=1 below so they don't OOM.
codegen-units = 256
# Enable incremental compilation (default, but be explicit).
incremental = true
# "unpacked" avoids generating a monolithic .pdb on Windows, which
# speeds up linking significantly.  Stabilised since Rust 1.73.
split-debuginfo = "unpacked"
# Line-tables-only for first-party code — full debuginfo (level 2)
# causes OOM on machines with limited paging file when compiling 178
# workspace crates in parallel.  Level 1 still gives usable backtraces.
debug = 0

# Reduce debuginfo for third-party crates — wgpu-core and openh264-sys2
# OOM with full debuginfo.  Level 0 = no debuginfo for deps, freeing
# significant memory during a 178-crate workspace build.
[profile.dev.package."*"]
debug = 0
# Optimise third-party crates in dev builds.  opt-level 1 gives the
# majority of the performance benefit of -O2 but uses significantly
# less memory during LLVM codegen.  With a 178-crate workspace,
# -O2 caused OOM on heavy crates (mongodb, sqlx-postgres, naga, etc.)
# because LLVM's pass pipeline at -O2 allocates ~2× more arena memory.
opt-level = 1

# ── Per-crate overrides for memory-hungry deps ───────────────────────
# These crates have extreme generic expansion during typeck/codegen.
# A single codegen unit forces sequential LLVM work on one thread,
# which caps peak memory.  debug=0 avoids emitting debug info for
# crates we'll never step into.
[profile.dev.package.sqlx-postgres]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-mysql]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-core]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-sqlite]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-macros]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-macros-core]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.naga]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.rustls]
codegen-units = 1
opt-level = 1
debug = 0

# The `windows` crate (v0.61+) with Win32 features is enormous — hundreds
# of thousands of generated bindings.  Compiling with 8 CGUs + debuginfo
# exhausts 32 GB during typeck.
[profile.dev.package.windows]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.windows-core]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.windows-sys]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.wgpu-core]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.wgpu-hal]
codegen-units = 1
opt-level = 1
debug = 0

[profile.release]
# LTO = thin gives ~90% of full LTO speed-up at a fraction of the cost.
lto = "thin"
codegen-units = 1
strip = true

[patch.crates-io]
ironrdp-connector = { path = "patches/ironrdp-connector" }
ironrdp-blocking = { path = "patches/ironrdp-blocking" }
